--- a/style.css
+++ b/style.css
@@ -4,3 +4,8 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/** Configuração do body */
+body {
+  background-color: linear-gradient(12.3rem,#190361 0%,#BB00FF 100%);
+}
